--- a/css/myresume.css
+++ b/css/myresume.css
@@ -15,3 +15,73 @@ h1 {
 	text-transform: none;
 	margin-top: 1rem;
 }
+
+a, .list-social-icons,.list-inline-item a:hover{color:#6c93b7}
+ .bg-primary{background-color:#6c93b7!important}
+ .text-primary{color:#6c93b7!important}
+a:active,a:focus,a:hover{color:#824027}
+
+h2{
+	font-family: inherit;
+}
+
+h3{
+	font-family: inherit;
+}
+
+.timeline{
+	position: relative;
+	margin: 0 auto;
+}
+
+.timeline::after{
+	content: '';
+	position: absolute;
+	width: 6px;
+	background-color: #488196;
+	top: 0;
+	bottom: 0;
+	left: 50%;
+	margin-left: -3px;
+}
+
+.timeline-block{
+	padding: 10px 40px;
+	position: relative;
+	background-color: inherit;
+	width: 50%;
+}
+
+/* The circles on the timeline */
+.timeline-block::after{
+	content: '';
+	position: absolute;
+	width: 25px;
+	height: 25px;
+	right: -12px;
+	background-color: white;
+	border: 4px solid #488196;
+	top: 15px;
+	border-radius: 50%;
+	z-index: 1;
+}
+
+/* Place the container to the left */
+.timeline-left{
+	left: 0;
+}
+
+/* Place the container to the right */
+.timeline-right{
+	left: 50%;
+}
+
+/* Fix the circle for containers on the right side */
+.timeline-right::after {
+  left: -12px;
+}
+
+
+
+
+
